force-app/main/default/objects/LeanData__Log__c/fields/LeanData__Assigned_Id_2__c.field-meta.xml
<CustomField>
    <fullName>LeanData__Assigned_Id_2__c</fullName>
    <externalId>true</externalId>
    <label>LeanData Assigned Id 2</label>
    <length>18</length>
    <type>Text</type>
</CustomField>