force-app/main/default/objects/LeanData__Log__c/fields/LeanData__Converted_Contact__c.field-meta.xml
<CustomField>
    <fullName>LeanData__Converted_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Converted Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Converted Contact Logs</relationshipLabel>
    <relationshipName>ConvertedContactLogs</relationshipName>
    <type>Lookup</type>
</CustomField>