force-app/main/default/objects/LeanData__Log__c/fields/LeanData__Message_3__c.field-meta.xml
<CustomField>
    <fullName>LeanData__Message_3__c</fullName>
    <label>Message</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>