force-app/main/default/objects/LeanData__Log__c/fields/LeanData__Num_Of_Processing_Attempts__c.field-meta.xml
<CustomField>
    <fullName>LeanData__Num_Of_Processing_Attempts__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Number Of Processing Attempts</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>