force-app/main/default/objects/LeanData__Log__c/fields/LeanData__Path_Node_103__c.field-meta.xml
<CustomField>
    <fullName>LeanData__Path_Node_103__c</fullName>
    <label>Path Node 103</label>
    <precision>10</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>