force-app/main/default/objects/LeanData__Log__c/fields/LeanData__Pre_Owner__c.field-meta.xml
<CustomField>
    <fullName>LeanData__Pre_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Pre Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>PreOwnerLogs</relationshipLabel>
    <relationshipName>PreOwnerLogs</relationshipName>
    <type>Lookup</type>
</CustomField>