force-app/main/default/objects/LeanData__Log__c/fields/LeanData__Routing_Action_Picklist__c.field-meta.xml
<CustomField>
    <fullName>LeanData__Routing_Action_Picklist__c</fullName>
    <label>Routing Action</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>converted</fullName>
            </value>
            <value>
                <fullName>converted - new account</fullName>
            </value>
            <value>
                <fullName>new account</fullName>
            </value>
            <value>
                <fullName>routed - account</fullName>
            </value>
            <value>
                <fullName>routed - opportunity</fullName>
            </value>
            <value>
                <fullName>routed - lead</fullName>
            </value>
            <value>
                <fullName>routed - round robin</fullName>
            </value>
            <value>
                <fullName>routed - territory</fullName>
            </value>
            <value>
                <fullName>routed - assignment rule</fullName>
            </value>
            <value>
                <fullName>routed - owner assignment</fullName>
            </value>
            <value>
                <fullName>assigned - account</fullName>
            </value>
            <value>
                <fullName>assigned - opportunity</fullName>
            </value>
            <value>
                <fullName>assigned - lead</fullName>
            </value>
            <value>
                <fullName>assigned - round robin</fullName>
            </value>
            <value>
                <fullName>assigned - territory</fullName>
            </value>
            <value>
                <fullName>assigned - owner assignment</fullName>
            </value>
            <value>
                <fullName>merged</fullName>
            </value>
            <value>
                <fullName>convert error</fullName>
            </value>
            <value>
                <fullName>merge error</fullName>
            </value>
            <value>
                <fullName>update error</fullName>
            </value>
            <value>
                <fullName>fallback</fullName>
            </value>
            <value>
                <fullName>error</fullName>
            </value>
            <value>
                <fullName>live routing - routed</fullName>
            </value>
            <value>
                <fullName>live routing - assigned</fullName>
            </value>
            <value>
                <fullName>live routing - no action</fullName>
            </value>
            <value>
                <fullName>live routing - error</fullName>
            </value>
            <value>
                <fullName>new task</fullName>
            </value>
            <value>
                <fullName>send notification</fullName>
            </value>
            <value>
                <fullName>assigned account team members</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>