force-app/main/default/objects/LeanData__Log__c/fields/LeanData__Setup_Time__c.field-meta.xml
<CustomField>
    <fullName>LeanData__Setup_Time__c</fullName>
    <label>Setup Time</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>