force-app/main/default/objects/LeanData__Log__c/fields/Routed_Dates__c.field-meta.xml
<CustomField>
    <fullName>Routed_Dates__c</fullName>
    <label>Routed Dates</label>
    <type>DateTime</type>
</CustomField>