force-app/main/default/objects/LeanData__Log__c/fields/Secondary_Assignment__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Assignment__c</fullName>
    <label>Secondary Assignment</label>
    <length>255</length>
    <type>Text</type>
</CustomField>